Redirecting Routes. Placeholders.
Signed-off-by: Andrey Pyzhikov <5071@mail.ru>

--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -40,6 +40,7 @@ Enhancements
     - The log format has also changed. If users are depending on the log format in their apps, the new log format is "<1-based count> <cleaned filepath>(<line>): <class><function><args>"
 - Added support for webp files to **app/Config/Mimes.php**.
 - Added 4th parameter ``$includeDir`` to ``get_filenames()``. See :php:func:`get_filenames`.
+- RouteCollection::addRedirect() can now use placeholders.
 
 Changes
 *******
