--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -30,7 +30,7 @@ New Improved Auto Routing
 Added an optional new more secure auto router. These are the changes from the traditional auto-routing:
 
 - A controller method needs HTTP verb prefix like ``getIndex()``, ``postCreate()``.
-    - Developers always know HTTP method, so requests by unexpected HTTP method does not happen.
+    - Developers always know the HTTP method, so requests by an unexpected HTTP method does not pass.
 - The Default Controller (``Home`` by default) and the Default Method (``index`` by default) must be omitted in the URI.
     - It restricts one-to-one correspondence between controller methods and URIs.
     - E.g. by default, you can access ``/``, but ``/home`` and ``/home/index`` will be 404.
