--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -22,6 +22,7 @@ BREAKING
 - The color code output by :ref:`CLI::color() <cli-library-color>` has been changed to fix a bug.
 - To prevent unexpected access from the web browser, if a controller is added to a cli route (``$routes->cli()``), all methods of that controller are no longer accessible via auto-routing.
 - There is a possible backward compatibility break for those users extending the History Collector and they should probably update ``History::setFiles()`` method.
+- The :php:func:`dot_array_search`'s unexpected behavior has been fixed. Now ``dot_array_search('foo.bar.baz', ['foo' => ['bar' => 23]])`` returns ``null``. The previous versions returned ``23``.
 
 Enhancements
 ************
