--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -44,6 +44,17 @@ Added an optional new more secure auto router. These are the changes from the le
 
 See :ref:`auto-routing-improved` for the details.
 
+Commands
+========
+
+- Added ``db:table`` command.
+    - You can now see the names of all the tables in the database you are currently connected, field names or other metadata, like the column type, max length and ... each table, and the information in that table in the terminal.
+        - ``db:table --show``
+        - ``db:table my_table``
+        - ``db:table my_table --metadata``
+        - ``db:table my_table --limit-row 50 --limit-field-value 20 --desc``
+- The ``spark routes`` command now shows closure routes, auto routes, and filters. See :ref:`URI Routing <spark-routes>`.
+
 Others
 ======
 
@@ -58,7 +69,6 @@ Others
 - Added Validation Strict Rules. See :ref:`validation-traditional-and-strict-rules`.
 - Added new OCI8 driver for database.
     - It can access Oracle Database and supports SQL and PL/SQL statements.
-- The ``spark routes`` command now shows closure routes, auto routes, and filters. See :ref:`URI Routing <spark-routes>`.
 - Exception information logged through ``log_message()`` has now improved. It now includes the file and line where the exception originated. It also does not truncate the message anymore.
     - The log format has also changed. If users are depending on the log format in their apps, the new log format is "<1-based count> <cleaned filepath>(<line>): <class><function><args>"
 - Added support for webp files to **app/Config/Mimes.php**.
@@ -70,12 +80,6 @@ Others
     - :ref:`select() <query-builder-select-rawsql>`, :ref:`where() <query-builder-where-rawsql>`, :ref:`like() <query-builder-like-rawsql>` accept the ``CodeIgniter\Database\RawSql`` instance.
 - Debugbar enhancements
     - Debug toolbar is now using ``microtime()`` instead of ``time()``.
-- Added new Command for CLI.
-  - ``db:table`` - You can now see the names of all the tables in the database you are currently connected, field names or other metadata, like the column type, max length and ... each table, and the information in that table in the terminal.
-    - ``db:table --show``
-    - ``db:table my_table``
-    - ``db:table my_table --metadata``
-    - ``db:table my_table --limit-row 50 --limit-field-value 20 --desc``
 
 Changes
 *******
