--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -52,7 +52,7 @@ Commands
         - ``spark db:table --show``
     - Or you can see the field names and the records of a table.
         - ``spark db:table my_table``
-        - ``spark db:table my_table --limit-row 50 --limit-field-value 20 --desc``
+        - ``spark db:table my_table --limit-rows 50 --limit-field-value 20 --desc``
     - Or you can see metadata like the column type, max length of a table.
         - ``spark db:table my_table --metadata``
 - The ``spark routes`` command now shows closure routes, auto routes, and filters. See :ref:`URI Routing <spark-routes>`.
