Bug: The SQLSRV driver ignores the port value from the config.
Signed-off-by: Andrey Pyzhikov <5071@mail.ru>

--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -119,5 +119,6 @@ Deprecations
 
 Bugs Fixed
 **********
+- The SQLSRV driver ignores the port value from the config.
 
 See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
