docs: message changes in changelog 4.2.7

--- a/source/changelogs/v4.2.7.rst
+++ b/source/changelogs/v4.2.7.rst
@@ -21,6 +21,11 @@ Enhancements
 
 none.
 
+Message Changes
+***************
+
+- Added missing item `valid_json` in `Language/en/Validation.php`
+
 Changes
 *******
 
