docs: message changes in changelog 4.2.7
Co-authored-by: Pooya Parsa Dadashi <pooya_parsa_dadashi@yahoo.com>

--- a/source/changelogs/v4.2.7.rst
+++ b/source/changelogs/v4.2.7.rst
@@ -24,7 +24,7 @@ none.
 Message Changes
 ***************
 
-- Added missing item `valid_json` in `Language/en/Validation.php`
+- Added missing item ``valid_json`` in ``Language/en/Validation.php``
 
 Changes
 *******
